--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
 
 <body>
 
-  <p>Check Console</p>
+  <section>
+    <div class="title">
+      <h1>Rock, Paper, Scissors!</h1>
+    </div>
+    <div class="choices">
+      <button id="btn-rock">Rock</button>
+      <button id="btn-paper">Paper</button>
+      <button id="btn-scissors">Scissors</button>
+    </div>
+    <div id="details">
+      <div id="playerSelection"></div>
+      <div id="computerSelection"></div>
+      <div id="results"></div>
+    </div>
+  </section>
 
   <script src="js/script.js"></script>
 </body>
